<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yarn"
    android:orientation="vertical"
    tools:context="com.example.android.abnd_project1.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/businessname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="8dp"
            android:text="@string/businessname"
            android:layout_gravity="center_vertical"
            style="@style/textPrimary"
            android:textSize="24sp"/>

        <ImageView
            android:id="@+id/imageshaun"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/imageshaun"
            android:src="@drawable/shaunknitting" />
    </LinearLayout>

    <TextView
        android:id="@+id/motto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:padding="8dp"
        android:text="@string/motto"
        style="@style/textSecondary"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/products"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/products"
        style="@style/textSecondary"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/imageneedlesyarn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/imageneedlesyarn"
            android:src="@drawable/needlesyarn" />

        <TextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:padding="8dp"
            android:text="@string/addresscontact"
            style="@style/textPrimary"
            android:textSize="14sp"/>

        <ImageView
            android:id="@+id/imageskeins"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/imageskeins"
            android:src="@drawable/skeins" />

    </LinearLayout>

</LinearLayout>
